<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activities.AddMeetingActivity">

    <TextView
        android:id="@+id/title_reu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/title_reu"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/heure_reu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:inputType="textEmailSubject"
        app:layout_constraintEnd_toEndOf="@+id/title_reu"
        app:layout_constraintStart_toStartOf="@+id/title_reu"
        app:layout_constraintTop_toBottomOf="@id/title_reu" />

    <TextView
        android:id="@+id/heure_reu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/heure_reu"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title_reu"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/heure"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/heure_reu"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/heure_reu"
        app:layout_constraintTop_toBottomOf="@+id/heure_reu" />

    <TextView
        android:id="@+id/lieu_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/lieu_reu"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/subject"
        app:layout_constraintStart_toStartOf="@+id/subject"
        app:layout_constraintTop_toBottomOf="@+id/subject" />

    <TextView
        android:id="@+id/participants_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/participants"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/participants"
        app:layout_constraintEnd_toEndOf="@+id/date_titre"
        app:layout_constraintStart_toStartOf="@+id/lieu_titre"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <Spinner
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/lieu_titre"
        app:layout_constraintStart_toStartOf="@+id/lieu_titre"
        app:layout_constraintTop_toBottomOf="@+id/lieu_titre" />

    <TextView
        android:id="@+id/date_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:text="@string/date_reu"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/timeTextView"
        app:layout_constraintStart_toStartOf="@+id/timeTextView"
        app:layout_constraintTop_toBottomOf="@+id/timeTextView" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/date_date"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/date_titre"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/date_titre"
        app:layout_constraintTop_toBottomOf="@+id/date_titre" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/lieu_titre"
        app:layout_constraintEnd_toEndOf="@+id/heure_reu"
        app:layout_constraintStart_toStartOf="@+id/title_reu"
        app:layout_constraintTop_toBottomOf="@+id/timeTextView" />

    <EditText
        android:id="@+id/participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participants_titre" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="btnClick"
        android:text="@string/ajouter"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participants" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/add_button"
        android:textColor="#FFFFFF"
        android:onClick="btnSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_button">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_button"
            app:singleLine="true">

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/liste_des_participants"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView2"
        app:layout_constraintEnd_toEndOf="@+id/participants_titre"
        app:layout_constraintStart_toStartOf="@+id/participants_titre"
        app:layout_constraintTop_toBottomOf="@+id/add_button" />

</androidx.constraintlayout.widget.ConstraintLayout>