<resources>
    <string name="app_name">MaReu</string>
    <string name="heure">00h00</string>
    <string name="title_reu"><u>Sujet de la réunion</u></string>
    <string name="heure_reu"><u>Heure de la réunion</u></string>
    <string name="lieu_reu"><u>Lieu de la réunion</u></string>
    <string name="date_reu"><u>Date de la réunion</u></string>
    <string name="date_date">dd/mm/aaaa</string>
    <string name="add_button">Ajouter la réunion</string>
    <string name="participants">Participants</string>
    <string name="ajouter">Ajouter</string>
    <string name="liste_des_participants">Liste des participants</string>

    <string-array name="meeting_location">
        <item>Mario</item>
        <item>Luigi</item>
        <item>Peach</item>
        <item>Browser</item>
        <item>Toad</item>
        <item>Yoshi</item>
    </string-array>
</resources>
